--- a/demo0925/src/main/resources/templates/test.html
+++ b/demo0925/src/main/resources/templates/test.html
@@ -48,11 +48,10 @@
 	
 	
 	<h3>post form, th:action, th:object, th:field</h3>
-	<form action="#" th:action="${processForm}" method="post" th:object="${city}">
-	    Input<input th:field="*{cityName}"/>
-	    Input<input th:field="*{localCityName}"/>
-	    Input<input th:field="*{cityId}"/>
-	    <input type="text" readonly>
+	<form action="#" th:action="${updateCityUri}" method="post" th:object="${city}">
+	    City Id:			<input th:field="*{cityId}" readonly/>
+	    City Name: 			<input th:field="*{cityName}" readonly/>
+	    Local City Name:	<input th:field="*{localCityName}"/>
 	    <button type="submit">Submit Info</button>
 	</form>
 	
