--- a/demo0925/src/main/resources/templates/test.html
+++ b/demo0925/src/main/resources/templates/test.html
@@ -1,6 +1,23 @@
 <section>
 	this is test page.
 	
+	<h3>file upload and downlod</h3>
+	<a href="/test/download?fileName=QQ截图20190919140324.png">download file</a>
+	
+	<p th:text="${message}"></p>
+	<p>上传文件，使用multipart/form-data类型</p>
+	<form action="/test/upload" method="post" enctype="multipart/form-data">
+	<input type="file" name="file">
+	<button type="submit">上传</button>
+	</form>
+	
+	<form action="/test/uploadBatchFile" method="post" enctype="multipart/form-data">
+	<input type="file" name="files">
+	<input type="file" name="files">
+	<button type="submit">上传</button>
+	</form>
+	<p>==================================================================</p>
+	
 	<h3>th:text</h3>
 	<h1 th:text="${thymeleafTitle}">this is thymeleaf title</h1>
 	<p th:text="${thymeleafTitle}">this is the thymeleaf title</p>
