--- a/demo0925/src/main/resources/static/css/base.css
+++ b/demo0925/src/main/resources/static/css/base.css
@@ -1081,3 +1081,16 @@ a:focus,a:hover{color:#0ae;} /*链接-悬浮颜色*/
 {color:#333;border-color:#3bc;background-color:#3bc;} /*融合-文本色-边框-背景*/
 .button.border-dot:hover,.button.border-dot:focus,.button.bg-dot:hover,.button.bg-dot:focus
 {color:#fff;border-color:#f00;background-color:#f00;} /*点缀色-文本-边框-背景*/
+
+
+body{ color:#333; font-size:13px;}
+input,select,textarea{color:#333;}
+.bg{ width:100%; height:100%; position:absolute; background:url(../image/bg.jpg) }
+.panel{background:#fff;}
+form .form-group:last-child{padding-bottom:0;}
+.passcode{position:absolute;right:0;bottom:0;height:32px;margin:1px;border-left:solid 1px #ddd;text-align:center;line-height:32px;border-radius:0 4px 4px 0;}
+ul,li{ list-style-type:none;}
+
+.field-icon-right .icon{ bottom:0px; top:auto}
+.loginbox { background:url(../image/tmbg-white.png); border:0px; height:400px;}
+.halfButton {width: 40%; float: left; margin-left:25px;}
