--- a/demo0925/src/main/resources/templates/fragments/header.html
+++ b/demo0925/src/main/resources/templates/fragments/header.html
@@ -1,4 +1,5 @@
 <section th:fragment="header">
-	This is header page.
-	<hr/>
+	<h3><a  href="/userInfo/userList">userInfo</a></h3>
+	<h3><a shiro:hasRole="admin" href="/userInfo/userAdd">userAdd</a></h3>
+	<h3><a href="/userInfo/userDel">userDel</a></h3>
 </section>
