--- a/demo0925/src/main/resources/templates/register.html
+++ b/demo0925/src/main/resources/templates/register.html
@@ -8,35 +8,27 @@
                 </div>
 	            <div class="panel loginbox">
 	                <div class="text-center margin-big padding-big-top">
-	                    <h1>后台管理中心</h1>
+	                    <h1>用户注册</h1>
 	                    <h4 style="color:#FF0000" id="erro1"></h4> 
 	                </div>
 	                <div class="panel-body" style="padding:30px; padding-bottom:10px; padding-top:10px;">
 	                    <div class="form-group">
 	                        <div class="field field-icon-right">
+	                            <label>用户名：</label>
 	                            <input type="text" class="input input-big"  name="userName" id="userName" placeholder="登录账号" />
-	                            <span class="icon icon-user margin-small"></span>
 	                        </div>
 	                    </div>
 	                    <div class="form-group">
 	                        <div class="field field-icon-right">
+	                        	<label>密码：</label>
 	                            <input type="password" class="input input-big" name="password" id="password"  placeholder="登录密码" />
-	                            <span class="icon icon-key margin-small"></span>
 	                        </div>
 	                    </div>
-	                    <div class="form-group">
-	                        <div class="field">
-	                            <input type="text" class="input input-big" id="vcode" name="vcode" placeholder="填写右侧的验证码" />
-	                            <img id="codePic" src="getGifCode" onclick="change()" alt="" width="100" height="32" class="passcode" style="height:43px;cursor:pointer;" />
-	
-	                        </div>
-	                    </div>
-	                    <P><input type="checkbox" name="rememberMe" id="rememberMe" />记住我</P>
 	                </div>
-	                <div style="">
-	                    <input type="button" onclick="loginAjax()" value="登录" id="ajaxLogin" 
-	                    	class="button button-block bg-main text-big input-big halfButton" />
-	                    <input type="button" onclick="javascrtpt:window.location.href='/register'" 
+	                <div style="padding:30px;">
+	                    <input type="button" onclick="javascrtpt:window.location.href='/login'" 
+	                    	value="登录" id="ajaxLogin" class="button button-block bg-main text-big input-big halfButton" />
+	                    <input type="button" onclick="registerAjax()" 
 	                    	value="注册" id="ajaxLogin" class="button button-block bg-main text-big input-big halfButton" />
 	                </div>
 	            </div>
