--- a/demo0925/src/main/resources/templates/shiroIndexSimple.html
+++ b/demo0925/src/main/resources/templates/shiroIndexSimple.html
@@ -6,12 +6,7 @@
 		<META name="description" content="THORNBIRD.COM"/>
 		
 		<script th:src="@{http://code.jquery.com/jquery-latest.js}" type="text/javascript"></script>
-	    <script th:src="${'/js/demo.js'}" type="text/javascript"></script>
-	    <link th:href="${'/css/main.css'}" rel="stylesheet" />
-	    <link th:href="${'/css/bootstrap.min.css'}" rel="stylesheet" />
-	    <link th:href="${'/css/sb-admin.css'}" rel="stylesheet" />
-	    <link th:href="${'/css/plugins/morris.css'}" rel="stylesheet" />
-	    <link th:href="${'/css/font-awesome.min.css'}" rel="stylesheet" />
+	    <link th:href="${'/css/userShiro/main.css'}" rel="stylesheet" />
 	</head>
 	
 	<body>
