--- a/demo0925/src/main/resources/templates/fragments/shiroHheader.html
+++ b/demo0925/src/main/resources/templates/fragments/shiroHheader.html
@@ -1,100 +1,27 @@
 <section th:fragment="header">
 	<!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <!-- 头部左边部分 -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/dashboard">Spring Boot Shiro Demo</a>
+            <a class="navbar-brand" href="/shiro/dashboard">Shiro demo</a>
         </div>
         
-        <!-- 头部右边部分 -->
-        <ul class="nav navbar-right top-nav">
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b class="caret"></b></a>
-                <ul class="dropdown-menu message-dropdown">
-                    <li class="message-preview">
-                        <a href="#">
-                            <div class="media">
-                                <span class="pull-left">
-                                    <img class="media-object" src="http://placehold.it/50x50" alt="">
-                                </span>
-                                <div class="media-body">
-                                    <h5 class="media-heading"><strong>John Smith</strong>
-                                    </h5>
-                                    <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-                                    <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="message-footer">
-                        <a href="#">Read All New Messages</a>
-                    </li>
-                </ul>
-            </li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a>
-                <ul class="dropdown-menu alert-dropdown">
-                    <li>
-                        <a href="#">primary message...<span class="label label-primary">99+</span></a>
-                    </li>
-                    <li>
-                        <a href="#">success message...<span class="label label-success">10</span></a>
-                    </li>
-                    <li>
-                        <a href="#">danger message...<span class="label label-danger">6</span></a>
-                    </li>
-                    <li class="divider"></li>
-                    <li>
-                        <a href="#">View All</a>
-                    </li>
-                </ul>
-            </li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> <shiro:principal/> <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    <li>
-                        <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
-                    </li>
-                    <li class="divider"></li>
-                    <li>
-                    	<!-- shiro 已经实现的功能，在ShiroSpringConfig类中配置拦截URL即可 -->
-                        <a href="/logout"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-        
-        <!-- 左边菜单 -->
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <ul class="nav navbar-nav side-nav itdragon-nav">
-                <li class="active">
-                    <a href="/shiro/dashboard"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
-                </li>
-                <li>
-                    <a href="/shiro/users"><i class="fa fa-fw fa-bar-chart-o"></i> Users</a>
-                </li>
-                <!-- 只有角色为admin的用户才有权限访问  -->
-                <!-- <shiro:hasRole name="admin">
-                </shiro:hasRole> -->
-                <li>
-                    <a href="/shiro/roles"><i class="fa fa-fw fa-file"></i> Roles</a>
-                </li>
-                <!-- 只有角色为admin或manager的用户才有权限访问  -->
-                <!-- <shiro:hasAnyRoles name="admin,manager">
-                </shiro:hasAnyRoles> -->
-                <li>
-                    <a href="/shiro/permissions"><i class="fa fa-fw fa-table"></i> Permissions</a>
-                </li>
-            </ul>
-        </div>
+        <ul class="nav navbar-nav navbar-left">
+			<li>
+			    <a href="/shiro/dashboard"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+			</li>
+			<li>
+			    <a href="/shiro/users"><i class="fa fa-fw fa-bar-chart-o"></i> Users</a>
+			</li>
+			<li>
+			    <a href="/shiro/roles"><i class="fa fa-fw fa-file"></i> Roles</a>
+			</li>
+			<li>
+			    <a href="/shiro/permissions"><i class="fa fa-fw fa-table"></i> Permissions</a>
+			</li>
+		</ul>
+		
+		<ul class="nav navbar-nav navbar-right">
+			<li><a href="/shiro/logout"><span class="glyphicon glyphicon-user"></span>Logout</a></li>
+		</ul>
     </nav>
 </section>
