--- a/demo0925/src/main/resources/templates/shiroIndex.html
+++ b/demo0925/src/main/resources/templates/shiroIndex.html
@@ -5,18 +5,11 @@
 		<TITLE>SpringDemo</TITLE>
 		<META name="description" content="THORNBIRD.COM"/>
 		
-		<script th:src="@{http://code.jquery.com/jquery-latest.js}" type="text/javascript"></script>
-	    
-	    <!-- 引入前端框架Bootstrap -->
-	    <script th:src="${'/js/userShiro/bootstrap.js'}" type="text/javascript"></script>
-	    <script th:src="${'/js/userShiro/plugins/morris/raphael.min.js'}" type="text/javascript"></script>
-	    <script th:src="${'/js/userShiro/plugins/morris/morris.min.js'}" type="text/javascript"></script>
-	    <script th:src="${'/js/userShiro/plugins/morris/morris-data.js'}" type="text/javascript"></script>
-	    <link th:href="${'/css/userShiro/main.css'}" rel="stylesheet" />
-	    <link th:href="${'/css/userShiro/bootstrap.min.css'}" rel="stylesheet" />
-	    <link th:href="${'/css/userShiro/sb-admin.css'}" rel="stylesheet" />
-	    <link th:href="${'/css/userShiro/plugins/morris.css'}" rel="stylesheet" />
-	    <link th:href="${'/css/userShiro/font-awesome/css/font-awesome.min.css'}" rel="stylesheet" />
+	    <script th:src="@{http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js}"></script>  
+	    <script th:src="@{http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js}"></script>
+	    <script th:src="${'/js/userShiro/userShiro.js'}" type="text/javascript"></script>
+		<link rel="stylesheet" th:href="@{http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css}">
+		<!-- <link th:href="${'/css/userShiro/main.css'}" rel="stylesheet" /> -->
 	</head>
 	
 	<body>
@@ -25,7 +18,7 @@
 			<div th:replace="fragments/shiroHheader :: header"></div>
 			
 			<!-- body -->
-			<div class='mainBody'>
+			<div class='mainBody' style="margin-top: 10px;">
 				<div th:if="${template}">
 					<div th:replace="${template}"></div>
 			    </div>
