--- a/demo0925/src/main/resources/templates/shiroIndexSimple.html
+++ b/demo0925/src/main/resources/templates/shiroIndexSimple.html
@@ -6,6 +6,7 @@
 		<META name="description" content="THORNBIRD.COM"/>
 		
 		<script th:src="@{http://code.jquery.com/jquery-latest.js}" type="text/javascript"></script>
+	    <script th:src="${'/js/userShiro/userShiro.js'}" type="text/javascript"></script>
 	    <link th:href="${'/css/userShiro/main.css'}" rel="stylesheet" />
 	</head>
 	
