--- a/demo0925/src/main/resources/templates/shiro/dashboard.html
+++ b/demo0925/src/main/resources/templates/shiro/dashboard.html
@@ -13,6 +13,7 @@
 					</ol>
 				</div>
 			</div>
+			
 			<!-- /.row -->
 			<div class="row">
 				<div class="col-lg-12">
@@ -52,7 +53,7 @@
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
-					<div class="panel panel-green">
+					<div class="panel panel-primary">
 						<div class="panel-heading">
 							<div class="row">
 								<div class="col-xs-3">
@@ -74,7 +75,7 @@
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
-					<div class="panel panel-yellow">
+					<div class="panel panel-primary">
 						<div class="panel-heading">
 							<div class="row">
 								<div class="col-xs-3">
@@ -96,7 +97,7 @@
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
-					<div class="panel panel-red">
+					<div class="panel panel-primary">
 						<div class="panel-heading">
 							<div class="row">
 								<div class="col-xs-3">
