--- a/demo0925/src/main/resources/templates/shiro/resources.html
+++ b/demo0925/src/main/resources/templates/shiro/resources.html
@@ -4,11 +4,11 @@
 			<!-- Page Heading -->
 			<div class="row">
 				<div class="col-lg-12">
-					<h1 class="page-header">Users</h1>
+					<h1 class="page-header">Resources</h1>
 					<ol class="breadcrumb">
 						<li><i class="fa fa-dashboard"></i> <a href="/shiro/dashboard">Dashboard</a>
 						</li>
-						<li class="active"><i class="fa fa-table"></i> Users</li>
+						<li class="active"><i class="fa fa-table"></i> Resources</li>
 					</ol>
 				</div>
 			</div>
@@ -23,55 +23,51 @@
 				</div>
 			</div>
 			
-			<!-- user list -->
-			<div id="userList" class="row">
+			<!-- resource list -->
+			<div id="resourceList" class="row">
 				<div class="col-lg-12">
-					<h2>用户息表</h2>
+					<h2>资源配置表  <button id="addResource" type="button" class="btn btn-default">新增</button></h2>
 					<div class="table-responsive">
 						<table class="table table-bordered table-hover table-striped">
 							<thead>
 								<tr>
-									<th>用户id</th>
-									<th>用户账号</th>
-									<th>创建日期</th>
-									<th>Operate</th>
+									<th>资源id</th>
+									<th>资源名称</th>
+									<th>资源路径</th>
+									<th>操作</th>
 								</tr>
 							</thead>
 							<tbody>
-								<tr th:each="user : ${users}">
-									<td name="userId" th:text="${user.userId}"></td>
-									<td name="userName" th:text="${user.userName}"></td>
-									<td th:text="${#dates.format(user.createDate,'yyyy-MM-dd HH:mm:ss')}"></td>
+								<tr th:each="resource : ${resources}">
+									<td name="resourceId" th:text="${resource.resourceId}"></td>
+									<td name="resourceName" th:text="${resource.resourceName}"></td>
+									<td name="resourceUri" th:text="${resource.resourceUri}"></td>
 									<td>
-										<a name="userEdit" href="#">EDIT</a> | 
-										<a th:href="'/shiro/deleteUser/' + ${user.userId}">DELETE</a>
+										<a name="editResource" href="#">EDIT</a> | 
+										<a th:href="'/shiro/deleteResource/' + ${resource.resourceId}">DELETE</a>
 									</td>
 								</tr>
 							</tbody>
-							<!-- <tbody>
-								<tr th:each="user : ${users}">
-									<td name="roleName" th:text="${user.userName}"></td>
-									<td th:text="${#dates.format(user.createDate,'yyyy-MM-dd HH:mm:ss')}"></td>
-									<td>
-										<a name="userEdit" href="#">EDIT</a> | 
-										<a th:href="'/shiro/deleteUser/' + ${user.userId}">DELETE</a>
-									</td>
-								</tr>
-							</tbody> -->
 						</table>
 					</div>
 				</div>
 			</div>
 			
-			<!-- role input -->
-			<div id="userEdit" style="display:none;">
-				<h2>用户编辑</h2>
+			<!-- resource input -->
+			<div id="resourceEdit" style="display:none;">
+				<h2>资源编辑</h2>
 				<form class="form-horizontal" role="form">
-					<input type="hidden" id="userId">
+					<input type="hidden" id="resourceId">
 					<div class="form-group">
-						<label for="userName" class="col-sm-1 control-label">用户名：</label>
+						<label for="resourceName" class="col-sm-1 control-label">资源名称：</label>
 						<div class="col-sm-2">
-							<input type="text" class="form-control" id="userName" readonly>
+							<input type="text" class="form-control" id="resourceName" placeholder="请输入名称">
+					    </div>
+					</div>
+					<div class="form-group">
+						<label for="resourceUri" class="col-sm-1 control-label">资源路径：</label>
+						<div class="col-sm-2">
+							<input type="text" class="form-control" id="resourceUri" placeholder="请输入uri">
 					    </div>
 					</div>
 					<div class="form-group">
@@ -84,7 +80,7 @@
 					</div>
 					<div class="form-group">
 						<div class="col-sm-offset-1 col-sm-2">
-							<button id="userSubmit" type="button" class="btn btn-default">提交</button>
+							<button id="resourceSubmit" type="button" class="btn btn-default">提交</button>
 						</div>
 					</div>
 				</form>
