--- a/demo0925/src/main/resources/templates/shiro/roles.html
+++ b/demo0925/src/main/resources/templates/shiro/roles.html
@@ -12,46 +12,63 @@
 					</ol>
 				</div>
 			</div>
-			<c:if test="${not empty message}">
-			<div class="row">
+			
+			<!-- message -->
+			<div name="messageDiv" class="row" style="display:none;">
 				<div class="col-lg-12">
 					<div class="alert alert-info alert-dismissable">
 						<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-						<i class="fa fa-info-circle"></i> <strong>${message}</strong>
+						<i class="fa fa-info-circle"></i> <strong name="message"></strong>
 					</div>
 				</div>
 			</div>
-			</c:if>
-			<!-- /.row -->
-			<div class="row">
+			
+			<!-- 角色列表 -->
+			<div id="roleList" class="row">
 				<div class="col-lg-12">
-					<h2>角色管理表</h2>
+					<h2>角色管理表 <button id="addRole" type="button" class="btn btn-default">新增</button></h2>
 					<div class="table-responsive">
 						<table class="table table-bordered table-hover table-striped">
 							<thead>
 								<tr>
-									<th>用户级别</th>
-									<th>描述说明</th>
-									<th>是否可用</th>
+									<th>角色id</th>
+									<th>角色名称</th>
 									<th>操作</th>
 								</tr>
 							</thead>
 							<tbody>
-							<c:forEach items="${sysRoles.content}" var="sysRole">
-								<tr>
-									<td><a href="${ctx}/roles/update/${sysRole.role}">${sysRole.role}</a></td>
-									<td>${sysRole.description}</td>
-									<td>${sysRole.available}</td>
-									<td><a href="${ctx}/roles/delete/${sysRole.id}">DELETE</a></td>
+								<tr th:each="role : ${roles}">
+									<td name="roleId" th:text="${role.roleId}"></td>
+									<td name="roleName" th:text="${role.roleName}"></td>
+									<td>
+										<a name="editRole" href="#">EDIT</a> | 
+										<a th:href="'/shiro/deleteRole/' + ${role.roleId}">DELETE</a>
+									</td>
 								</tr>
-							</c:forEach>
 							</tbody>
 						</table>
-						<tags:pagination page="${sysRoles}" paginationSize="10"/>
 					</div>
 				</div>
 			</div>
-			<!-- /.row -->
+			
+			<!-- role input -->
+			<div id="roleEdit" style="display:none;">
+				<h2>角色编辑</h2>
+				<form class="form-horizontal" role="form">
+					<input type="hidden" id="roleId">
+					<div class="form-group">
+						<label for="roleName" class="col-sm-1 control-label">角色名称：</label>
+						<div class="col-sm-2">
+							<input type="text" class="form-control" id="roleName" placeholder="请输入角色名称">
+					    </div>
+					</div>
+					<div class="form-group">
+						<div class="col-sm-offset-1 col-sm-2">
+							<button id="roleSubmit" type="button" class="btn btn-default">提交</button>
+						</div>
+					</div>
+				</form>
+			</div>
 		</div>
 	</div>
 </section>
