--- a/demo0925/src/main/resources/templates/shiroIndex.html
+++ b/demo0925/src/main/resources/templates/shiroIndex.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"  
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"  
+      xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">  
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 		<TITLE>SpringDemo</TITLE>
@@ -9,7 +11,7 @@
 	    <script th:src="@{http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js}"></script>
 	    <script th:src="${'/js/userShiro/userShiro.js'}" type="text/javascript"></script>
 		<link rel="stylesheet" th:href="@{http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css}">
-		<!-- <link th:href="${'/css/userShiro/main.css'}" rel="stylesheet" /> -->
+		<link th:href="${'/css/userShiro/shiroIndex.css'}" rel="stylesheet" />
 	</head>
 	
 	<body>
@@ -18,7 +20,7 @@
 			<div th:replace="fragments/shiroHheader :: header"></div>
 			
 			<!-- body -->
-			<div class='mainBody' style="margin-top: 10px;">
+			<div class='mainBody'>
 				<div th:if="${template}">
 					<div th:replace="${template}"></div>
 			    </div>
