--- a/demo0925/src/main/resources/templates/shiroIndexSimple.html
+++ b/demo0925/src/main/resources/templates/shiroIndexSimple.html
@@ -7,7 +7,7 @@
 		
 		<script th:src="@{http://code.jquery.com/jquery-latest.js}" type="text/javascript"></script>
 	    <script th:src="${'/js/userShiro/userShiro.js'}" type="text/javascript"></script>
-	    <link th:href="${'/css/userShiro/main.css'}" rel="stylesheet" />
+	    <link th:href="${'/css/userShiro/shiroIndexSimple.css'}" rel="stylesheet" />
 	</head>
 	
 	<body>
