--- a/sb_shiro/src/main/resources/templates/index.html
+++ b/sb_shiro/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
 			<div th:replace="fragments/header :: header"></div>
 			
 			<!-- container -->
-			<div class='mainBody'>
+			<div class='mainBody' style="margin-top: 20px;">
 				<div th:if="${template}">
 					<div th:replace="${template}"></div>
 			    </div>
