--- a/sb_shiro/src/main/resources/templates/indexSimple.html
+++ b/sb_shiro/src/main/resources/templates/indexSimple.html
@@ -17,7 +17,7 @@
 		<link th:href="${'/css/userShiro/shiroIndex.css'}" rel="stylesheet" />
 	</head>
 	
-	<body>
+	<body style="background: url(../../image/login_bgx.gif);">
 		<div id="wrapper">
 			
 			<!-- container -->
