--- a/sb_shiro/src/main/resources/templates/fragments/header.html
+++ b/sb_shiro/src/main/resources/templates/fragments/header.html
@@ -9,16 +9,16 @@
 			<li>
 			    <a href="/account/dashboard"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
 			</li>
-			<!-- <li shiro:hasAnyRoles="admin,manager"> -->
-			<li>
+			<li shiro:hasAnyRoles="admin,manager">
+			<!-- <li> -->
 			    <a href="/account/users"><i class="fa fa-fw fa-bar-chart-o"></i> Users</a>
 			</li>
-			<!-- <li shiro:hasAnyRoles="admin,manager"> -->
-			<li>
+			<li shiro:hasAnyRoles="admin,manager">
+			<!-- <li> -->
 			    <a href="/account/roles"><i class="fa fa-fw fa-file"></i> Roles</a>
 			</li>
-			<!-- <li shiro:hasAnyRoles="admin,manager"> -->
-			<li>
+			<li shiro:hasAnyRoles="admin,manager">
+			<!-- <li> -->
 			    <a href="/account/resources"><i class="fa fa-fw fa-table"></i> Resources</a>
 			</li>
 		</ul>
