--- a/sb_erp/src/main/resources/templates/fragments/header.html
+++ b/sb_erp/src/main/resources/templates/fragments/header.html
@@ -27,107 +27,148 @@
 		<div id="side-nav">
 			<ul id="nav">
 				<!-- <shiro:hasRole name="eme"> -->
-				<!-- 示例：这是一个下拉菜单 -->
-				<li><a href="javascript:;"> <i class="iconfont">&#xe6b8;</i> <cite>职工管理</cite> <i
-						class="iconfont nav_right">&#xe697;</i>
-				</a>
+				<li>
+					<a href="javascript:;">
+						<i class="iconfont">&#xe6b8;</i>
+						<cite>职工管理</cite>
+						<i class="iconfont nav_right">&#xe697;</i>
+					</a>
 					<ul class="sub-menu">
-						<!-- 这是一个普通按钮 -->
-						<li><a _href="manageEmeController/toUserList.do"> <i
-								class="iconfont">&#xe6a7;</i> <cite>用户管理</cite>
-						</a></li>
-						<!-- 按钮结束 -->
-						<li><a _href="view/organization/organization-list.jsp"> <i
-								class="iconfont">&#xe6a7;</i> <cite>组织结构</cite>
-						</a></li>
-						<li><a _href="manageEmeController/toDepartList.do"> <i
-								class="iconfont">&#xe6a7;</i> <cite>部门管理</cite>
-						</a></li>
-					</ul></li>
+						<li>
+							<a _href="/account/userList">
+								<i class="iconfont">&#xe6a7;</i>
+								<cite>用户管理</cite>
+							</a>
+						</li>
+						<li>
+							<a _href="/organization/organizationPage">
+								<i class="iconfont">&#xe6a7;</i>
+								<cite>组织结构</cite>
+							</a>
+						</li>
+						<li>
+							<a _href="manageEmeController/toDepartList.do">
+								<i class="iconfont">&#xe6a7;</i>
+								<cite>部门管理</cite>
+							</a>
+						</li>
+						<li>
+							<a _href="manageEmeController/toDepartList.do">
+								<i class="iconfont">&#xe6a7;</i>
+								<cite>部门管理111</cite>
+							</a>
+						</li>
+					</ul>
+				</li>
 				<!-- </shiro:hasRole> -->
-				<!-- 这组下拉菜单结束 -->
+				
 				<!-- <shiro:hasRole name="authr"> -->
-				<!-- 这是另一组菜单示例 -->
-				<li><a href="javascript:;"> <i class="iconfont">&#xe629;</i> 
-				<cite>权限管理</cite> <i
-						class="iconfont nav_right">&#xe697;</i>
-				</a>
+				<li>
+					<a href="javascript:;">
+						<i class="iconfont">&#xe629;</i> 
+						<cite>权限管理</cite>
+						<i class="iconfont nav_right">&#xe697;</i>
+					</a>
 					<ul class="sub-menu">
-						<li><a _href="roleController/toUserRole.do"> <i class="iconfont">&#xe6a7;</i> <cite>职工权限分配</cite>
-						</a></li>
-						<li><a _href="roleController/toDepart.do"> <i class="iconfont">&#xe6a7;</i> <cite>部门权限分配</cite>
-						</a></li>
-					</ul></li>
+						<li>
+							<a _href="roleController/toUserRole.do">
+								<i class="iconfont">&#xe6a7;</i>
+								<cite>职工权限分配</cite>
+							</a>
+						</li>
+						<li>
+							<a _href="roleController/toDepart.do">
+								<i class="iconfont">&#xe6a7;</i>
+								<cite>部门权限分配</cite>
+							</a>
+						</li>
+					</ul>
+				</li>
 				<!-- </shiro:hasRole> -->
-				<!-- 示例结束 -->
 				
-				<!-- 这是另一组菜单示例 -->
 				<!-- <shiro:hasRole name="asset"> -->
-				<li><a href="javascript:;"> 
-				<i class="iconfont">&#xe607;</i> 
-				<cite>我的资产</cite> <i
-						class="iconfont nav_right">&#xe697;</i>
-				</a>
+				<li>
+					<a href="javascript:;"> 
+						<i class="iconfont">&#xe607;</i> 
+						<cite>我的资产</cite>
+						<i class="iconfont nav_right">&#xe697;</i>
+					</a>
 					<ul class="sub-menu">
-						<li><a _href="applyController/showApplyByUserName.do"> <i class="iconfont">&#xe6a7;</i> <cite>在用资产</cite>
-						</a></li>
-						<li><a _href="applyController/addApply.do"> <i class="iconfont">&#xe6a7;</i> <cite>资产申请</cite>
-						</a></li>
-						<li><a _href="porchaseController/showPorchaseByUserName.do"> <i class="iconfont">&#xe6a7;</i> <cite>采购资产</cite>
-						</a></li>
-					</ul></li>
+						<li>
+							<a _href="applyController/showApplyByUserName.do">
+								<i class="iconfont">&#xe6a7;</i>
+								<cite>在用资产</cite>
+							</a>
+						</li>
+						<li>
+							<a _href="applyController/addApply.do">
+								<i class="iconfont">&#xe6a7;</i>
+								<cite>资产申请</cite>
+							</a>
+						</li>
+						<li>
+							<a _href="porchaseController/showPorchaseByUserName.do">
+								<i class="iconfont">&#xe6a7;</i>
+								<cite>采购资产</cite>
+							</a>
+						</li>
+					</ul>
+				</li>
 				<!-- </shiro:hasRole> -->
-				<!-- 示例结束 -->
 				
-				<!-- 这是另一组菜单示例 -->
 				<!-- <shiro:hasRole name="process"> -->
-				<li><a href="javascript:;"> 
-				<i class="iconfont">&#xe602;</i> 
-				 <cite>流程管理</cite> <i
-						class="iconfont nav_right">&#xe697;</i>
-				</a>
+				<li>
+					<a href="javascript:;"> 
+						<i class="iconfont">&#xe602;</i> 
+					 	<cite>流程管理</cite>
+						<i class="iconfont nav_right">&#xe697;</i>
+					</a>
 					<ul class="sub-menu">
-						<li><a _href="porchaseController/showPorchase.do"> <i class="iconfont">&#xe6a7;</i> <cite>采购批准</cite>
-						</a></li>
-						<li><a _href="applyController/showAllapply.do"> <i class="iconfont">&#xe6a7;</i> <cite>申请批准</cite>
-						</a></li>
-						<li><a _href="maintainController/showallmaintain.do"> <i class="iconfont">&#xe6a7;</i> <cite>申请报废批准</cite>
-						</a></li>
-					</ul></li>
+						<li>
+							<a _href="porchaseController/showPorchase.do">
+								<i class="iconfont">&#xe6a7;</i>
+								<cite>采购批准</cite>
+							</a>
+						</li>
+						<li>
+							<a _href="applyController/showAllapply.do">
+								<i class="iconfont">&#xe6a7;</i>
+								<cite>申请批准</cite>
+							</a>
+						</li>
+						<li>
+							<a _href="maintainController/showallmaintain.do">
+								<i class="iconfont">&#xe6a7;</i>
+								<cite>申请报废批准</cite>
+							</a>
+						</li>
+					</ul>
+				</li>
 				<!-- </shiro:hasRole> -->
-				<!-- 示例结束 -->
 				
-					<!-- 这是另一组菜单示例 -->
-				<!-- <shiro:hasRole name="account"> -->
-				<li><a href="javascript:;"> 
-				<i class="iconfont">&#xe68f;</i> 
-				 <cite>资金核算</cite> <i
-						class="iconfont nav_right">&#xe697;</i>
-				</a>
-					<ul class="sub-menu">
-						<li><a _href="view/porchase/quary_bill.jsp"> <i class="iconfont">&#xe6a7;</i> <cite>采购核算</cite>
-						</a></li>
-					</ul></li>
-				<!-- </shiro:hasRole> -->
-				<!-- 示例结束 -->
-				
-				
-					<!-- 这是另一组菜单示例 -->
 				<!-- <shiro:hasRole name="storehourse"> -->
-				<li><a href="javascript:;"> 
-				<i class="iconfont">&#xe613;</i> 
-				<cite>库存管理</cite> <i
-						class="iconfont nav_right">&#xe697;</i>
-				</a>
+				<li>
+					<a href="javascript:;"> 
+						<i class="iconfont">&#xe613;</i> 
+						<cite>库存管理</cite>
+						<i class="iconfont nav_right">&#xe697;</i>
+					</a>
 					<ul class="sub-menu">
-						<li><a _href="propertyController/showAllProperty.do"> <i class="iconfont">&#xe6a7;</i> <cite>库存资产</cite>
-						</a></li>
-						<li><a _href="propertyController/showBorrowreturn.do"> <i class="iconfont">&#xe6a7;</i> <cite>资产流动记录</cite>
-						</a></li>
-					</ul></li>
+						<li>
+							<a _href="propertyController/showAllProperty.do">
+								<i class="iconfont">&#xe6a7;</i>
+								<cite>库存资产</cite>
+							</a>
+						</li>
+						<li>
+							<a _href="propertyController/showBorrowreturn.do">
+								<i class="iconfont">&#xe6a7;</i>
+								<cite>资产流动记录</cite>
+							</a>
+						</li>
+					</ul>
+				</li>
 				<!-- </shiro:hasRole> -->
-				<!-- 示例结束 -->
-	
 			</ul>
 		</div>
 	</div>
