--- a/sb_erp/src/main/resources/static/css/xadmin.css
+++ b/sb_erp/src/main/resources/static/css/xadmin.css
@@ -466,4 +466,20 @@ table th, table td {
 		margin: 10px;
 	}
 }
+@font-face {font-family: "iconfont";
+	src: url('/fonts/index/iconfont.eot'); /* IE9*/
+	src: url('/fonts/index/iconfont.eot#iefix') format('embedded-opentype'), /* IE6-IE8 */
+	url('/fonts/index/iconfont.woff') format('woff'), /* chrome, firefox */
+	url('/fonts/index/iconfont.ttf') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+	url('/fonts/index/iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */
+}
+.iconfont {
+	font-family:"iconfont" !important;
+	font-size:16px;
+	font-style:normal;
+	-webkit-font-smoothing: antialiased;
+	-webkit-text-stroke-width: 0.2px;
+	-moz-osx-font-smoothing: grayscale;
+}
+
 
