--- a/sb_erp/src/main/resources/templates/fragments/footer.html
+++ b/sb_erp/src/main/resources/templates/fragments/footer.html
@@ -1,5 +1,5 @@
 <section th:fragment="footer">
 	<div class="footer">
-		<div class="copyright">@2003-1029</div>
+		<div class="copyright">Copyright © 2007-2019 HQYJ.COM ---- @author HymanHu 2019-10-28</div>
 	</div>
 </section>
