--- a/sb_erp/src/main/resources/templates/indexSimple.html
+++ b/sb_erp/src/main/resources/templates/indexSimple.html
@@ -17,9 +17,14 @@
 		<script th:src="${'/js/jquery.ztree.all.js'}" type="text/javascript"></script>
 		<script th:src="${'/js/bootstrap.js'}" type="text/javascript"></script>
 		<script th:src="${'/js/organization-list.js'}" type="text/javascript"></script>
+		<script th:src="${'/js/kkpager.min.js'}" type="text/javascript"></script>
 		<link th:href="${'/css/font.css'}" rel="stylesheet">
 		<link th:href="${'/css/xadmin.css'}" rel="stylesheet">
 		<link th:href="${'/css/cutsom-style.css'}" rel="stylesheet">
+		<link th:href="${'/css/zTreeStyle/zTreeStyle.css'}" rel="stylesheet">
+		<link th:href="${'/css/bootstrap.css'}" rel="stylesheet">
+		<link th:href="${'/css/kkpager_orange.css'}" rel="stylesheet">
+		<link th:href="${'/lib/layui/css/layui.css'}" rel="stylesheet">
 	</head>
 	<body>
 		<div th:if="${template}">
