--- a/sb_erp/src/main/resources/templates/account/login.html
+++ b/sb_erp/src/main/resources/templates/account/login.html
@@ -31,7 +31,7 @@
 					class="layui-input">
 				<hr class="hr15">
 				<input lay-submit lay-filter="login" style="width: 100%;" id="loginButton" 
-					type="button" value="登录" onclick="login()" />
+					type="button" value="登录" />
 				<hr class="hr20">
 				<div class="layui-form-item">
 				<div class="layui-form-item" pane="">
