--- a/sb_erp/src/main/resources/templates/common/wellcome.html
+++ b/sb_erp/src/main/resources/templates/common/wellcome.html
@@ -13,7 +13,7 @@
 					<tbody>
 						<tr>
 							<th width="30%">您的账号</th>
-							<td><span>${user.accountNumber }</span></td>
+							<td><span th:text="${user.account}"></span></td>
 						</tr>
 						<tr>
 							<td>您的姓名</td>
@@ -29,7 +29,7 @@
 						</tr>
 						<tr>
 							<td>您的IP地址</td>
-							<td>${userIp }</td>
+							<td><span th:text="${localIp}"></span></td>
 						</tr>
 					</tbody>
 				</table>
