--- a/sb_erp/src/main/resources/templates/indexSimple.html
+++ b/sb_erp/src/main/resources/templates/indexSimple.html
@@ -16,7 +16,7 @@
 		<script th:src="${'/js/xadmin.js'}" type="text/javascript"></script>
 		<script th:src="${'/js/jquery.ztree.all.js'}" type="text/javascript"></script>
 		<script th:src="${'/js/bootstrap.js'}" type="text/javascript"></script>
-		<script th:src="${'/js/organization-list.js'}" type="text/javascript"></script>
+		<!-- <script th:src="${'/js/organization-list.js'}" type="text/javascript"></script> -->
 		<script th:src="${'/js/kkpager.min.js'}" type="text/javascript"></script>
 		<link th:href="${'/css/font.css'}" rel="stylesheet">
 		<link th:href="${'/css/xadmin.css'}" rel="stylesheet">
