--- a/sb_erp/src/main/resources/templates/account/userList.html
+++ b/sb_erp/src/main/resources/templates/account/userList.html
@@ -3,21 +3,21 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
 	xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<TITLE>SpringDemo</TITLE>
-<META name="description" content="THORNBIRD.COM" />
-
-<!-- 引入外部js或css -->
-<script th:src="@{https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js}"></script>
-
-<!-- 引入内部js或css -->
-
-<link th:href="${'/css/font.css'}" rel="stylesheet">
-<link th:href="${'/css/xadmin.css'}" rel="stylesheet">
-<script th:src="${'/lib/layui/layui.js'}" charset="utf-8"></script>
-<script th:src="${'/js/xadmin.js'}" type="text/javascript"></script>
-</head>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<TITLE>SpringDemo</TITLE>
+		<META name="description" content="THORNBIRD.COM" />
+		
+		<!-- 引入外部js或css -->
+		<script th:src="@{https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js}"></script>
+		
+		<!-- 引入内部js或css -->
+		
+		<link th:href="${'/css/font.css'}" rel="stylesheet">
+		<link th:href="${'/css/xadmin.css'}" rel="stylesheet">
+		<script th:src="${'/lib/layui/layui.js'}" charset="utf-8"></script>
+		<script th:src="${'/js/xadmin.js'}" type="text/javascript"></script>
+	</head>
 <body>
 	<div class="x-nav">
 		<span class="layui-breadcrumb"> <a href="">职工管理</a> <a> <cite>用户管理</cite></a>
@@ -61,7 +61,7 @@
 		</div>
 		<xblock>
 		<button class="layui-btn"
-			onclick="x_admin_show('添加用户','manageEmeController/toUserAdd.do')">
+			onclick="x_admin_show('添加用户','/account/userAdd')">
 			<i class="layui-icon"></i>入职添加
 		</button>
 		<span class="x-right" style="line-height: 40px">共有数据：<a
