--- a/sb_erp/src/main/resources/templates/fragments/header.html
+++ b/sb_erp/src/main/resources/templates/fragments/header.html
@@ -26,6 +26,36 @@
 	<div class="left-nav">
 		<div id="side-nav">
 			<ul id="nav">
+				<!-- <shiro:hasRole name="eme"> -->
+				<li>
+					<a href="javascript:;">
+						<i class="iconfont">&#xe6b8;</i>
+						<cite>组织管理</cite>
+						<i class="iconfont nav_right">&#xe697;</i>
+					</a>
+					<ul class="sub-menu">
+						<li>
+							<a _href="/organization/structure">
+								<i class="iconfont">&#xe6a7;</i>
+								<cite>组织结构</cite>
+							</a>
+						</li>
+						<li>
+							<a _href="/account/userList">
+								<i class="iconfont">&#xe6a7;</i>
+								<cite>用户信息</cite>
+							</a>
+						</li>
+						<li>
+							<a _href="/organization/departmentList">
+								<i class="iconfont">&#xe6a7;</i>
+								<cite>部门管理</cite>
+							</a>
+						</li>
+					</ul>
+				</li>
+				<!-- </shiro:hasRole> -->
+				
 				<!-- <shiro:hasRole name="authr"> -->
 				<li>
 					<a href="javascript:;">
@@ -44,36 +74,6 @@
 							<a _href="/authority/departmentAuthPage">
 								<i class="iconfont">&#xe6a7;</i>
 								<cite>部门权限分配</cite>
-							</a>
-						</li>
-					</ul>
-				</li>
-				<!-- </shiro:hasRole> -->
-			
-				<!-- <shiro:hasRole name="eme"> -->
-				<li>
-					<a href="javascript:;">
-						<i class="iconfont">&#xe6b8;</i>
-						<cite>组织管理</cite>
-						<i class="iconfont nav_right">&#xe697;</i>
-					</a>
-					<ul class="sub-menu">
-						<li>
-							<a _href="/account/userList">
-								<i class="iconfont">&#xe6a7;</i>
-								<cite>用户信息</cite>
-							</a>
-						</li>
-						<li>
-							<a _href="/organization/structurePage">
-								<i class="iconfont">&#xe6a7;</i>
-								<cite>组织结构</cite>
-							</a>
-						</li>
-						<li>
-							<a _href="/organization/departmentPage">
-								<i class="iconfont">&#xe6a7;</i>
-								<cite>部门管理</cite>
 							</a>
 						</li>
 					</ul>
