--- a/sb_erp/src/main/resources/templates/fragments/header.html
+++ b/sb_erp/src/main/resources/templates/fragments/header.html
@@ -65,6 +65,12 @@
 					</a>
 					<ul class="sub-menu">
 						<li>
+							<a _href="/authority/roleList">
+								<i class="iconfont">&#xe6a7;</i>
+								<cite>角色管理</cite>
+							</a>
+						</li>
+						<li>
 							<a _href="/authority/roleAuthPage">
 								<i class="iconfont">&#xe6a7;</i>
 								<cite>职工权限分配</cite>
