--- a/sb_erp/src/main/resources/templates/fragments/header.html
+++ b/sb_erp/src/main/resources/templates/fragments/header.html
@@ -49,7 +49,13 @@
 						<li>
 							<a _href="/organization/departmentList">
 								<i class="iconfont">&#xe6a7;</i>
-								<cite>部门管理</cite>
+								<cite>部门信息</cite>
+							</a>
+						</li>
+						<li>
+							<a _href="/organization/positionList">
+								<i class="iconfont">&#xe6a7;</i>
+								<cite>职位信息</cite>
 							</a>
 						</li>
 					</ul>
@@ -67,19 +73,25 @@
 						<li>
 							<a _href="/authority/roleList">
 								<i class="iconfont">&#xe6a7;</i>
-								<cite>角色管理</cite>
+								<cite>角色信息</cite>
+							</a>
+						</li>
+						<li>
+							<a _href="/authority/resourceList">
+								<i class="iconfont">&#xe6a7;</i>
+								<cite>资源信息</cite>
 							</a>
 						</li>
 						<li>
 							<a _href="/authority/roleAuthPage">
 								<i class="iconfont">&#xe6a7;</i>
-								<cite>职工权限分配</cite>
+								<cite>用户角色</cite>
 							</a>
 						</li>
 						<li>
 							<a _href="/authority/departmentAuthPage">
 								<i class="iconfont">&#xe6a7;</i>
-								<cite>部门权限分配</cite>
+								<cite>角色资源</cite>
 							</a>
 						</li>
 					</ul>
