--- a/sb_erp/src/main/resources/templates/organization/positionAdd.html
+++ b/sb_erp/src/main/resources/templates/organization/positionAdd.html
@@ -32,24 +32,35 @@
 		<form id="form1" class="layui-form layui-form-pane">
 			<div class="layui-form-item">
 				<label for="name" class="layui-form-label"> <span
-					class="x-red">*</span>角色名称
+					class="x-red">*</span>职位名称
 				</label>
 				<div class="layui-input-inline">
-					<input id="roleName" type="text" name="roleName"
+					<input id="positionName" type="text" name="positionName"
 						required="" lay-verify="required|repeat" autocomplete="off"
 						class="layui-input">
 				</div>
 				<div id="account" class="layui-form-mid layui-word-aux">
-					至少2个字符</div>
+					至少3个字符</div>
 			</div>
 			<div class="layui-form-item">
 				<label for="name" class="layui-form-label"> <span
-					class="x-red">*</span>角色描述
+					class="x-red">*</span>职位描述
 				</label>
 				<div class="layui-input-inline">
-					<input type="text" name="roleDesc"
+					<input type="text" name="positionDescription"
 						required="" lay-verify="required" autocomplete="off"
 						class="layui-input">
+				</div>
+			</div>
+			<div class="layui-form-item">
+				<label for="name" class="layui-form-label"> <span
+					class="x-red">*</span>所属部门
+				</label>
+				<div class="layui-input-inline">
+					<select name="departName">
+						<option th:each="department,departmentStatus : ${departments}" 
+							th:value="${department.departName}" th:text="${department.departName}"></option>
+					</select>
 				</div>
 			</div>
 			<div class="layui-form-item" style="text-align: center;">
@@ -61,113 +72,43 @@
 	</div>
 </body>
 <script type="text/javascript">
-var departName="";
 var isRepeat=false;
-$(function(){
-var d=$("#departName").val();
-if(d!=null&&d!=""){
-	departName=d;
-	console.log("departName:"+departName);
-	url="updateDepart.ajax?departId=${depart.departId }";
-}else{
-	url="addDepart.ajax"
-}
-
-})
-function onlyUser(){
-	if($("#departName").val().length<2){
-		$("#departName").select();
-		$("#account").html("至少2个字符");
-	}else{
-		if($("#departName").val()==departName){
-			$("#account").html("<i class=\"layui-icon layui-anim  layui-anim-scale\" style=\"color: #1E9FFF;\">&#xe618;</i>");
-		}else{			
-				DepartAjax();			
-		}
-	}			
-};
+layui.use(['form', 'layedit', 'laydate'], function(){
+	var form = layui.form,
+	layer = layui.layer,
+	layedit = layui.layedit,
+	laydate = layui.laydate;
   
-function DepartAjax(){
-	$.ajax({
-		type : "POST",
-		async:false,
-		data : {
-			roleName:$("#roleName").val()//发送当前输入框的名称
-		},
-		dataType : "text",
-		url : "manageEmeController/isRepeatDepart.ajax",//请求后台验证是否已存在
-		success : function(result) {
-			console.log(result);
-			if(result=="NO"){
-				isRepeat=false;//后台返回"NO"则不存在，并前台局部刷新提示合法
-				$("#account").html("<i class=\"layui-icon layui-anim  layui-anim-scale\" style=\"color: #1E9FFF;\">&#xe618;</i>  ")
-			}else{
-				isRepeat=true;
-				$("#userAccount").select();////后台返回"YES"则存在，并前台局部刷新提示不合法
-				$("#account").html("<span style=\"color: #FF5722\" class=\"layui-anim layui-anim-scale\">名称已存在!</span>")
+	//创建一个编辑器
+	var editIndex = layedit.build('LAY_demo_editor');
+ 
+	//自定义验证规则
+	form.verify({
+		title: function(value){
+			if(value.length < 5){
+				return '标题至少得5个字符啊';
 			}
-			
 		},
-		error : function() {
-			$("#userAccount").select();
-			$("#account").html("<span style=\"color: #FF5722\" class=\"layui-anim layui-anim-scale\">无法连接服务器!</span>")
-			layer.msg('无法连接服务器', {icon: 2});
+		repeat:function(value){
+			if(value.length < 3){
+				return '至少三个字啊';
+			}else if(isRepeat){
+				return '名称已存在';  
+			}
+		},
+		content: function(value){
+			layedit.sync(editIndex);
 		}
 	});
-}
-layui.use(['form', 'layedit', 'laydate'], function(){
-  var form = layui.form
-  ,layer = layui.layer
-  ,layedit = layui.layedit
-  ,laydate = layui.laydate;
-  
-  //日期
-  laydate.render({
-    elem: '#date'
-  });
-  laydate.render({
-    elem: '#date1'
-  });
-  
-  //创建一个编辑器
-  var editIndex = layedit.build('LAY_demo_editor');
- 
-//自定义验证规则
-form.verify({
-    title: function(value){
-      if(value.length < 5){
-        return '标题至少得5个字符啊';
-      }
-    }
-    ,repeat:function(value){
-    	if(value.length < 2){
-            return '至少2个字啊';
-          }else if(isRepeat){
-        	  return '名称已存在';  
-          }
-    }
-    ,content: function(value){
-      layedit.sync(editIndex);
-    }
-    
-});
-//
-////监听指定开关
-  form.on('switch(switchTest)', function(data){
-    layer.msg('开关checked：'+ (this.checked ? 'true' : 'false'), {
-      offset: '6px'
-    });
-    layer.tips('温馨提示：请注意开关状态的文字可以随意定义，而不仅仅是ON|OFF', data.othis)
-  });
-  
-  //监听提交
+	
+	//监听提交
 	form.on('submit(add)', function(data){
            console.log(data);
            $.ajax({
        		type : "POST",
        		data : $('#form1').serialize(),
        		dataType : "text",
-       		url :"/authority/doRoleAdd",
+       		url :"/organization/doPositionAdd",
        		success : function(data) {
        			var result = eval("(" + data + ")");
     			if (result.status == 200) {
@@ -187,12 +128,8 @@ form.verify({
        			layer.msg('无法连接服务器', {icon: 2});
        		}
        	});   
-           return false;
-         });
-       //监听提交
-  
-  
+		return false;
+	});
 });
-
 </script>
 </html>
